@startuml Collections

class Places {
    $id : string
    latitude : float
    longitude : float
}

' class Submissions {
'     $id : string
'     $createdAt : string
'     user : string
'     latitude : float
'     longitude : float
' }

class Comments {
    $id : string
    $createdAt : string
    place : string
    user : string
    text : string
}

' class Votes {
'     $id : string
'     $createdAt : string
'     place : string
'     user : string
'     value : int
' }

class Photos {
    $id : string
    $createdAt : string
    fileId : string
    place : string
    user : string
    text : string
}

class Users {
    $id : string
    name : string
}

Places --  Comments : has many
Places -- Photos : has many
Comments -- Users : has 1
Photos -- Users : has 1

@enduml